# framework

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt
docs/doxygen/: Doxyfile.in  bootstrap.js  customdoxygen.css  directories.dox  footer.html  groups.dox  guides.dox  modules.dox  namespaces.dox
docs/latex/: CMakeLists.txt  architecture.tex  common.tex  main-loop.tex  main_loop.tex  push-button.tex  signal-slot.tex  signal_slot.tex
docs/wiztk/: build.md  coding_style.md  ide.md  resources.md
src/wiztk/: CMakeLists.txt
src/wiztk/async/: CMakeLists.txt  event-loop.cpp  event-loop_private.cpp  event-loop_quit-event.cpp  event-loop_quit-event.hpp  message-queue.cpp  scheduler.cpp
src/wiztk/async/event-loop/: private.cpp  private.hpp  quit-event.cpp  quit-event.hpp
src/wiztk/base/: CMakeLists.txt  binode.cpp  compound-deque.cpp  counted-deque.cpp  deque.cpp  dynamic-library.cpp  object.cpp  posix-timer.cpp  sigcxx.cpp  string.cpp  time.cpp  timer.cpp  trace.cpp
src/wiztk/base/threading/: thread.cpp
src/wiztk/device/: CMakeLists.txt
src/wiztk/device/video/: camera.cpp
src/wiztk/graphic/: CMakeLists.txt  abstract-surface.cpp  bitmap.cpp  bitmap_private.hpp  canvas.cpp  canvas_private.hpp  font-style.cpp  font-style_private.hpp  font.cpp  font_private.hpp  gradient-shader.cpp  image-info.cpp  image-info_private.hpp  matrix.cpp  paint.cpp  path.cpp  shader.cpp  shader_private.hpp  surface_private.hpp  text-box.cpp  typeface.cpp  typeface_private.hpp  view-surface.cpp
src/wiztk/graphic/internal/: bitmap_private.hpp  canvas_private.hpp  font-style_private.hpp  font_private.hpp  image-info_private.hpp  matrix_private.hpp  shader_private.hpp  surface_private.hpp  typeface_private.hpp
src/wiztk/graphics/: CMakeLists.txt  abstract-backend.cpp  abstract-gl-backend.cpp  abstract-rendering-backend.cpp  abstract-surface.cpp  abstract-surface_private.hpp  bitmap.cpp  bitmap_private.hpp  canvas.cpp  canvas_private.hpp  color-space.cpp  font-style.cpp  font-style_private.hpp  font.cpp  font_private.hpp  gradient-shader.cpp  image-info.cpp  image-info_private.hpp  image.cpp  matrix.cpp  matrix_private.hpp  paint.cpp  path.cpp  pixmap.cpp  shader.cpp  shader_private.hpp  surface-props.cpp  surface.cpp  surface_private.hpp  text-box.cpp  typeface.cpp  typeface_private.hpp  view-surface.cpp
src/wiztk/graphics/abstract-surface/: private.hpp
src/wiztk/graphics/bitmap/: private.hpp
src/wiztk/graphics/canvas/: native.hpp  private.hpp
src/wiztk/graphics/color-space/: private.hpp
src/wiztk/graphics/font/: private.hpp
src/wiztk/graphics/font-style/: private.hpp
src/wiztk/graphics/image/: private.hpp
src/wiztk/graphics/image-info/: private.hpp
src/wiztk/graphics/matrix/: private.hpp
src/wiztk/graphics/paint/: private.hpp
src/wiztk/graphics/path/: private.hpp
src/wiztk/graphics/pixmap/: private.hpp
src/wiztk/graphics/shader/: private.hpp
src/wiztk/graphics/surface/: private.hpp
src/wiztk/graphics/surface-props/: private.hpp
src/wiztk/graphics/typeface/: private.hpp
src/wiztk/gui/: CMakeLists.txt  abstract-button.cpp  abstract-egl-backend.cpp  abstract-event-handler.cpp  abstract-event-handler_private.hpp  abstract-layout.cpp  abstract-rendering-api.cpp  abstract-rendering-api_private.hpp  abstract-rendering-api_proxy.hpp  abstract-rendering-backend.cpp  abstract-shell-view.cpp  abstract-shell-view_private.cpp  abstract-shell-view_private.hpp  abstract-view.cpp  abstract-view_iterators.hpp  abstract-view_private.hpp  anchor-group.cpp  anchor.cpp  application.cpp  buffer.cpp  buffer_private.hpp  callback.cpp  cursor.cpp  dialog.cpp  display.cpp  display_private.cpp  display_private.hpp  display_proxy.cpp  display_proxy.hpp  gl-view.cpp  gl-window.cpp  gles2-backend.cpp  gles2-backend_private.cpp  glesv2-api.cpp  input-event.cpp  input-manager.cpp  input.cpp  input_private.cpp  keyboard_state.hpp  keymap.cpp  (+39 more)
src/wiztk/gui/abstract-egl-backend/: private.hpp
src/wiztk/gui/abstract-event-handler/: private.hpp
src/wiztk/gui/abstract-shell-view/: private.cpp  private.hpp
src/wiztk/gui/abstract-view/: iterators.hpp  private.hpp
src/wiztk/gui/buffer/: private.cpp  private.hpp
src/wiztk/gui/display/: private.cpp  private.hpp  proxy.cpp  proxy.hpp
src/wiztk/gui/gles2-backend/: private.cpp  private.hpp
src/wiztk/gui/input/: private.cpp  private.hpp
src/wiztk/gui/internal/: abstract-event-handler_private.hpp  abstract-rendering-api_private.hpp  abstract-rendering-api_proxy.hpp  abstract-shell-view_private.cpp  abstract-shell-view_private.hpp  abstract-view_iterators.hpp  abstract-view_private.hpp  buffer_private.cpp  display_private.cpp  display_private.hpp  display_proxy.hpp  input_private.cpp  input_private.hpp  keyboard_state.cpp  keymap.cpp  keymap.hpp  mouse-event_private.hpp  output_private.hpp  surface_private.cpp  surface_private.hpp  surface_shell_popup_private.hpp  surface_shell_private.cpp  surface_shell_private.hpp  surface_shell_toplevel_private.cpp  surface_shell_toplevel_private.hpp  theme-dark.cpp  theme-dark.hpp  view-surface_private.hpp  view-surface_shell_private.cpp
src/wiztk/gui/main-loop/: display-event.cpp  private.cpp  private.hpp  signal-event.cpp  signal-event.hpp
src/wiztk/gui/mouse-event/: private.hpp
src/wiztk/gui/output/: private.cpp  private.hpp
src/wiztk/gui/shared-memory-pool/: private.cpp  private.hpp
src/wiztk/gui/surface/: private.cpp  private.hpp
src/wiztk/gui/view-surface/: private.cpp  private.hpp
src/wiztk/net/: CMakeLists.txt  address-info.cpp  io-buffer.cpp  ip-address.cpp  ip-address_native.cpp  ip-address_native.hpp  ip-address_private.cpp  server-socket.cpp  socket.cpp
src/wiztk/net/internal/: address-info_private.hpp  ip-address_native.cpp  ip-address_native.hpp  ip-address_private.hpp
src/wiztk/net/ip-address/: native.cpp  native.hpp  private.cpp  private.hpp
src/wiztk/system/: CMakeLists.txt  time.cpp  timer.cpp
src/wiztk/system/async/: event-loop.cpp  (+2 more)
test/wiztk/base/: CMakeLists.txt
test/wiztk/graphic/: CMakeLists.txt
test/wiztk/gui/: CMakeLists.txt
(+435 files in other folders)
